# quad_midbridge_ws

./: .gitattributes  .gitignore  README.md
src/: PATCH_NOTES.md
src/quad_midbridge_attitude_offboard/: CMakeLists.txt  package.xml
src/quad_midbridge_attitude_offboard/src/: attitude_offboard_node.cpp  attitude_offboard_node.cpp.bak_20260427_103146
src/quad_midbridge_flatness_mapper/: CMakeLists.txt  package.xml
src/quad_midbridge_flatness_mapper/src/: flatness_mapper_node.cpp  flatness_mapper_node.cpp.bak_20260427_103146
src/quad_midbridge_governor/: CMakeLists.txt  package.xml
src/quad_midbridge_governor.bak_20260427_103146/config/: governor_v2.yaml
src/quad_midbridge_governor.bak_20260427_103146/src/: governor_node.cpp
src/quad_midbridge_governor/config/: governor_v2.yaml
src/quad_midbridge_governor/launch/: circle_orbit_robust.launch.py  forward_slow_15m_robust.launch.py  hover_stable_15m_robust.launch.py  hover_then_forward_15m_robust.launch.py
src/quad_midbridge_governor/src/: aligned_local_intent_node.cpp  circular_local_intent_manager_node.cpp  governor_node.cpp  scripted_local_intent_manager_node.cpp
src/quad_midbridge_mpcc/: CMakeLists.txt  package.xml
src/quad_midbridge_mpcc/config/: mpcc_solver.yaml
src/quad_midbridge_mpcc/docs/: ACADOS_GENERATED_INTEGRATION.md  RAL_FULL_MPCC_NEXT_STEPS.md
src/quad_midbridge_mpcc/include/quad_midbridge_mpcc/: acados_generated_adapter.hpp  acados_generated_bindings.hpp  acados_generated_solver.hpp  acados_problem_builder.hpp  acados_skeleton_solver.hpp  full_state_placeholder_solver.hpp  mpcc_path_utils.hpp  mpcc_solver_interface.hpp  mpcc_types.hpp  reference_model_solver.hpp
src/quad_midbridge_mpcc/src/: acados_generated_adapter.cpp  acados_generated_bindings.cpp  acados_generated_solver.cpp  acados_problem_builder.cpp  acados_skeleton_solver.cpp  factory.cpp  full_state_placeholder_solver.cpp  mpcc_node.cpp  reference_model_solver.cpp
src/quad_midbridge_mpcc/tools/: generate_mpcc_acados_solver.py
src/quad_midbridge_msgs/: CMakeLists.txt  package.xml
src/quad_midbridge_msgs/msg/: AttitudeThrustReference.msg  ExecutableReference.msg  FlatnessDebug.msg  LocalIntent.msg  MpccDebug.msg
