<?xml version="1.0"?>
<package format="3">
  <name>quad_midbridge_flatness_mapper</name>
  <version>0.0.1</version>
  <description>Flatness mapper from executable reference to attitude-thrust reference.</description>

  <maintainer email="zjnujza@todo.todo">zjnujza</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>quad_midbridge_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
