<?xml version="1.0"?>
<package format="3">
  <name>quad_midbridge_governor</name>
  <version>0.0.1</version>
  <description>Reference governor for quad midbridge.</description>
  <maintainer email="591856170@qq.com">zjnu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>quad_midbridge_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
